# postgres-supabase-iac

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
postgres_supabase_iac/: __main__.py  create_tables.py
postgres_supabase_iac/schemas/: schemas.py
postgres_supabase_iac/schemas/users/: users.py
